update dependencies and java 21
* update depedencies

* remove funk controller

* remove funk controller

* fix code quality issues

* update java 21

* Revert "update java 21"

This reverts commit 7e704f442a4aef4f0ae512c532c7f64d30afa242.

* update java 21

* fix code quality

* upload code coverage to sonar

* add jacoco

* try fix sonar code coverage

* Update maven.yml

* remove obsolete preview-enabling